--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -22,12 +22,16 @@
 -->
 <!--EN-TETE-->
 <ion-header >
-  <ion-toolbar color="news" mode='ios'>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <img src="./assets/img/s.png" height="28"/>
-    <ion-title align="center">{{title | translate}}</ion-title>
+  <ion-toolbar color="news">
+    <ion-buttons slot="start">
+        <ion-menu-toggle>
+          <ion-button>
+            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          </ion-button>
+        </ion-menu-toggle>
+        <img src="./assets/img/s.png" height="28"/>
+    </ion-buttons>
+    <ion-title horizontal="center">{{title | translate}}</ion-title>
   </ion-toolbar>
   <ion-segment [(ngModel)]="segment" name="segment" (ionChange)="tabChanged()" >
     <ion-segment-button value="univ">
@@ -56,11 +60,11 @@
         <ion-label>{{'NEWS.VALVE' | translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
-  <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" *ngIf="segment === 'univ'"></ion-searchbar>
 </ion-header>
 
 <!--BODY-->
 <ion-content class="feed-list" #news>
+  <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" *ngIf="segment === 'univ'"></ion-searchbar>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
       pullingIcon="arrow-dropdown"
@@ -113,12 +117,15 @@
 <!------------------------------NEWS UNIVERSITAIRES & FACULTAIRES-------------------------------->
   <ng-container *ngIf="segment==='univ' || (segment === 'fac' && facsegment === 'news' && userS.hasFac())">
     <ion-list #newsList  [hidden]="shownNews === 0" >
-      <ion-item *ngFor = "let item of displayedNews">
-        <ion-item button (click)="goToNewsDetail(item)" no-lines>
-          <h3>{{item.title}}</h3>
+      <ion-item *ngFor="let item of displayedNews" button (click)="goToNewsDetail(item)">
+        <ion-label>
+          <p><b>{{item.title}}</b></p>
           <p [innerHtml]="item.trimmedDescription"></p>
-          <p>{{item.pubDate | date: 'dd/MM/yyyy'}}</p>
-        </ion-item>
+          <p>
+            <ion-icon slot="start" name="calendar"></ion-icon>
+            {{item.pubDate | date: 'dd/MM/yyyy'}}
+          </p>
+        </ion-label>
       </ion-item>
     </ion-list>
     <ion-list-header *ngIf="nonews && !searching">
@@ -126,11 +133,11 @@
     </ion-list-header>
   </ng-container>
 
-<!----------------- BUTTON TO CHANGE FAC ------------------------->
-  <ion-fab vertical="bottom" horizontal="end"	 *ngIf="segment==='fac' && facsegment === 'news' && userS.hasFac()">
-    <ion-fab-button (click)="removeFac(fac)">
-      <ion-icon name="swap" ></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-
 </ion-content>
+
+<!----------------- BUTTON TO CHANGE FAC ------------------------->
+<ion-fab vertical="bottom" horizontal="end"	 *ngIf="segment==='fac' && facsegment === 'news' && userS.hasFac()">
+  <ion-fab-button (click)="removeFac(fac)">
+    <ion-icon name="swap" ></ion-icon>
+  </ion-fab-button>
+</ion-fab>
