--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -161,10 +161,10 @@ ion-title {
 z-index: 1;
 }
 
-ion-segment {
+ion-segment, ion-tab-bar, ion-tab-button {
   background-color: rgb(0,33,78);
 }
-.segment-button {
+.segment-button, ion-tab-button {
   color: white !important;
 }
 .menu-title{
