NewsDetails + button to ion-button (some fixes to do)

--- a/src/app/pages/credit/credit.html
+++ b/src/app/pages/credit/credit.html
@@ -22,9 +22,9 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="cred">
-    <button ion-button icon-only menuToggle>
+    <ion-button icon-only menuToggle>
       <ion-icon name="menu"></ion-icon>
-    </button>
+    </ion-button>
     <img src="./assets/img/s.png" height="28"/>
     <ion-title>{{title | translate}}</ion-title>
   </ion-toolbar>
