--- a/src/app/pages/guindaille2-0/guindaille2-0.html
+++ b/src/app/pages/guindaille2-0/guindaille2-0.html
@@ -45,7 +45,7 @@
 <ion-content [ngClass]="{'guindailleHelp' : segment === 'help', 'guindaille' : segment !== 'help'}" >
   <ng-container *ngIf="segment==='pict'" class="gelem">
     <ion-item-divider  class="gelem">
-      <button ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.PICTO' | translate}}</p></button>
+      <ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.PICTO' | translate}}</p></ion-button>
     </ion-item-divider>
 
     <ion-grid class="gelem" no-lines>
@@ -97,7 +97,7 @@
 
   <ng-container *ngIf="segment==='effect'" class="gelem">
     <ion-item-divider   class="gelem" no-lines>
-      <button ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.EFFECT' | translate}}</p></button>
+      <ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.EFFECT' | translate}}</p></ion-button>
     </ion-item-divider>
 
     <ion-item class="gelem" no-lines>
@@ -112,7 +112,7 @@
 
   <ng-container *ngIf="segment==='help'" class="gelem">
     <ion-item-divider  class="gelem" no-lines>
-      <button ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.HELP' | translate}}</p></button>
+      <ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.HELP' | translate}}</p></ion-button>
     </ion-item-divider>
 
     <ion-item  class="gelem">
