--- a/src/app/pages/studies/course/modal-info/modal-info.html
+++ b/src/app/pages/studies/course/modal-info/modal-info.html
@@ -23,9 +23,9 @@
 <!--EN-TETE-->
 <ion-header>
     <ion-buttons end>
-        <button ion-button icon-only end (tap)="closeModal()">
+        <ion-button icon-only end (tap)="closeModal()">
             <ion-icon name="close"></ion-icon>
-        </button>
+        </ion-button>
     </ion-buttons>
 </ion-header>
 
