--- a/src/app/pages/studies/hebdo/hebdo.html
+++ b/src/app/pages/studies/hebdo/hebdo.html
@@ -48,10 +48,10 @@
         <p text-center *ngIf="course.enseignants"> {{'COURSE.TEACHER' | translate}} : {{course.enseignants}}</p>
       </ion-item>
       <ion-item-options side="right">
-        <button ion-button (click)="addToCalendar(slidingItem, course)" >
+        <ion-button (click)="addToCalendar(slidingItem, course)" >
           <ion-icon name="calendar"></ion-icon>
           {{'COURSE.CALENDAR' | translate}}
-        </button>
+        </ion-button>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
@@ -67,10 +67,10 @@
       </ion-item>
 
       <ion-item-options side="right">
-        <button ion-button (click)="" >
+        <ion-button (click)="" >
           <ion-icon name="calendar"></ion-icon>
           {{'COURSE.CALENDAR' | translate}}
-        </button>
+        </ion-button>
       </ion-item-options>
     </ion-item-sliding>-->
 
