--- a/src/app/pages/studies/modal-project/modal-project.html
+++ b/src/app/pages/studies/modal-project/modal-project.html
@@ -30,8 +30,8 @@
 <div text-center> {{'MODAL.PROJECT' | translate}} : </div>
   <ion-list>
     <button ion-item *ngFor= "let project of projects" (click)="closeModal(project)">
-      <button ion-button full  > {{project.name}} </button>
-    </button>
+      <ion-button full  > {{project.name}} </ion-button>
+    </ion-button>
   </ion-list>
 
 </ion-content>
