--- a/src/app/pages/tuto/tuto.html
+++ b/src/app/pages/tuto/tuto.html
@@ -94,7 +94,7 @@
     <ion-row>
       <ion-col>
         <ion-row  justify-content-center align-items-center><p>{{'TUTO.SIDE8' | translate}}</p></ion-row>
-        <button ion-button color="light" (click)="goToHome()">Go to HomeScreen</button>
+        <ion-button color="light" (click)="goToHome()">Go to HomeScreen</ion-button>
       </ion-col>
     </ion-row>
   </ion-slide>
