--- a/src/app/pages/events/events-details/events-details.html
+++ b/src/app/pages/events/events-details/events-details.html
@@ -21,9 +21,9 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="event" secondary>
-    <button ion-button menuToggle>
+    <ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
-    </button>
+    </ion-button>
     <ion-title>{{event.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -40,16 +40,16 @@
     </ion-card-content>
     <ion-row no-padding>
       <ion-col text-right>
-        <button ion-button clear small icon-left (click)="addFavorite(event)">
+        <ion-button clear small icon-left (click)="addFavorite(event)">
           <ion-icon name='star'></ion-icon>
           {{'EVENTS.FAV' | translate}}
-        </button>
+        </ion-button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small icon-left (click)="openPage(event.link)">
+        <ion-button clear small icon-left (click)="openPage(event.link)">
           <ion-icon name='share-alt'></ion-icon>
           {{'EVENTS.SITE' | translate}}
-        </button>
+        </ion-button>
       </ion-col>
     </ion-row>
 
