--- a/src/app/pages/studies/studies.html
+++ b/src/app/pages/studies/studies.html
@@ -23,14 +23,14 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="uclouvain">
-    <button ion-button icon-only menuToggle>
+    <ion-button icon-only menuToggle>
       <ion-icon name="menu"></ion-icon>
-    </button>
+    </ion-button>
     <img src="./assets/img/s.png" height="28"/>
     <ion-title align="center">{{title | translate}}</ion-title>
-    <button ion-button icon-only end  menuToggle="studiesMenu">
+    <ion-button icon-only end  menuToggle="studiesMenu">
       <ion-icon name="menu"></ion-icon>
-    </button>
+    </ion-button>
   </ion-toolbar>
     <ion-segment [(ngModel)]="segment">
     <ion-segment-button value="prog">
@@ -46,10 +46,10 @@
 <!--BODY-->
 <!------------------------------- RIGHT MENU TO GO MOODLE, UCL PORTAL ... ------------------------------------------>
 <ion-menu persistent=true id="studiesMenu" [content]="studiesContent" side="right" type="overlay">
-  <button> </button>
-  <button ion-item (tap)="launch('http://www.uclouvain.be/')"> uclouvain.be </button>
-  <button ion-item (tap)="launch('https://moodleucl.uclouvain.be')"> Moodle ucl </button>
-  <button ion-item (tap)="openModalProject()"> {{'STUDY.CHANGEADE' | translate}} </button>
+  <button> </ion-button>
+  <button ion-item (tap)="launch('http://www.uclouvain.be/')"> uclouvain.be </ion-button>
+  <button ion-item (tap)="launch('https://moodleucl.uclouvain.be')"> Moodle ucl </ion-button>
+  <button ion-item (tap)="openModalProject()"> {{'STUDY.CHANGEADE' | translate}} </ion-button>
 </ion-menu>
 
 <ion-content padding #studiesContent [ngClass]="{'cours' : segment === 'cours'}">
@@ -64,14 +64,14 @@
         <h2>{{course.acronym}} - {{course.name}}</h2>
       </ion-item>
       <ion-item-options side="right">
-        <!--<button ion-button (tap)="addCourseToCalendar(slidingItem, course)" >
+        <!--<ion-button (tap)="addCourseToCalendar(slidingItem, course)" >
           <ion-icon name="calendar"></ion-icon>
             {{'STUDY.CALENDAR' | translate}}
-        </button>-->
-        <button ion-button (tap)="removeCourse(course)" >
+        </ion-button>-->
+        <ion-button (tap)="removeCourse(course)" >
           <ion-icon name="trash"></ion-icon>
             {{'STUDY.DEL' | translate}}
-        </button>
+        </ion-button>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
@@ -98,26 +98,26 @@
     <ion-row>
       <ion-col>
         <div id="error" text-center *ngIf="error" class="alert alert-danger" style="color: red"><b  >{{error}}</b></div>
-        <button id="login" ion-button class="submit-btn" full type="submit" [disabled]="!loginForm.form.valid">Login</button>
+        <button id="login" ion-button class="submit-btn" full type="submit" [disabled]="!loginForm.form.valid">Login</ion-button>
       </ion-col>
     </ion-row>
   </form>
 
   <!------------------------------------------------- LISTE DU PROGRAMME DE COURS ------------------------------------------->
   <ion-list *ngIf="status">
-    <!--<button ion-button full (tap)="openWeekPage()">{{'STUDY.WEEK' | translate}}</button>-->
+    <!--<ion-button full (tap)="openWeekPage()">{{'STUDY.WEEK' | translate}}</ion-button>-->
     <h4 text-center *ngIf="prog">{{prog}}</h4>
     <p text-center> {{'STUDY.STATUS' | translate}} : {{statusInsc}}</p>
-    <button ion-button full (tap)="openExamPage()" color="uclouvain">{{'STUDY.EXAM' | translate}}</button>
+    <ion-button full (tap)="openExamPage()" color="uclouvain">{{'STUDY.EXAM' | translate}}</ion-button>
     <ion-list *ngFor="let activity of activities">
     <ion-item-sliding #slidingItem>
       <ion-item>
         {{activity.sigle}}<!-- - {{activity.name}}-->
       </ion-item>
       <ion-item-options>
-        <button ion-button outline (tap)="addCourseFromProgram(activity.sigle)" class="large-icon">
+        <ion-button outline (tap)="addCourseFromProgram(activity.sigle)" class="large-icon">
           <ion-icon name='add-circle'></ion-icon>
-        </button>
+        </ion-button>
       </ion-item-options>
     </ion-item-sliding>
     </ion-list>
@@ -137,7 +137,7 @@
     <ion-fab fab fab-bottom right style="margin-bottom:65px;">
     <button id="prompt" ion-fab fab-fixed (tap)="showPrompt()">
       <ion-icon name="add"> </ion-icon>
-    </button>
+    </ion-button>
   </ion-fab>
   <ion-icon name='help-circle'></ion-icon><p>{{'STUDY.SWIPE' | translate}}</p>
 </ion-footer>
