--- a/src/app/pages/param/param.html
+++ b/src/app/pages/param/param.html
@@ -32,7 +32,7 @@
 
 <!--BODY-->
 <ion-content padding>
-<ion-button block round color="setting" (tap)="language_choice()">{{'SETTING.LANGUE' | translate }}</ion-button>
-<ion-button block round color="setting" (tap)="campus_choice()">Campus</ion-button>
-<ion-button block round color="setting" (tap)="openTuto()">{{'SETTING.TUTO' | translate }}</ion-button>
+<ion-button block round color="setting" (click)="language_choice()">{{'SETTING.LANGUE' | translate }}</ion-button>
+<ion-button block round color="setting" (click)="campus_choice()">Campus</ion-button>
+<ion-button block round color="setting" (click)="openTuto()">{{'SETTING.TUTO' | translate }}</ion-button>
 </ion-content>
