--- a/src/app/pages/guindaille2-0/guindaille2-0.html
+++ b/src/app/pages/guindaille2-0/guindaille2-0.html
@@ -51,45 +51,45 @@
     <ion-grid class="gelem" no-lines>
           <ion-row>
             <ion-col col-4>
-              <img alt="alterner" src="./assets/img/guindaille/alterner.png" align="middle"  height="auto" (tap)="showAlert(alterner)"/>
+              <img alt="alterner" src="./assets/img/guindaille/alterner.png" align="middle"  height="auto" (click)="showAlert(alterner)"/>
             </ion-col >
             <ion-col col-4>
-              <img alt="bruit" src="./assets/img/guindaille/Bruit-exterieur.png" align="middle"  height="auto" (tap)="showAlert(bruit)"/>
+              <img alt="bruit" src="./assets/img/guindaille/Bruit-exterieur.png" align="middle"  height="auto" (click)="showAlert(bruit)"/>
             </ion-col>
             <ion-col col-4>
-              <img alt="eau" src="./assets/img/guindaille/eau-gratuite.png" align="middle"  height="auto" (tap)="showAlert(eau)"/>
+              <img alt="eau" src="./assets/img/guindaille/eau-gratuite.png" align="middle"  height="auto" (click)="showAlert(eau)"/>
             </ion-col>
           </ion-row>
 
 
           <ion-row>
             <ion-col col-4>
-              <img alt="ou" src="./assets/img/guindaille/jen-suis-ou.png" align="middle"  height="auto" (tap)="showAlert(ou)"/>
+              <img alt="ou" src="./assets/img/guindaille/jen-suis-ou.png" align="middle"  height="auto" (click)="showAlert(ou)"/>
             </ion-col>
             <ion-col col-4>
-              <img alt="cans" src="./assets/img/guindaille/no-cans-no-glass.png" align="middle"  height="auto" (tap)="showAlert(cans)"/>
+              <img alt="cans" src="./assets/img/guindaille/no-cans-no-glass.png" align="middle"  height="auto" (click)="showAlert(cans)"/>
             </ion-col>
             <ion-col col-4>
-              <img alt="preservatif" src="./assets/img/guindaille/preservatif-jy-pense.png" align="middle"  height="auto" (tap)="showAlert(preservatif)"/>
+              <img alt="preservatif" src="./assets/img/guindaille/preservatif-jy-pense.png" align="middle"  height="auto" (click)="showAlert(preservatif)"/>
             </ion-col>
           </ion-row>
 
           <ion-row>
             <ion-col col-4>
-              <img alt="racompagner" src="./assets/img/guindaille/racompagner.png" align="middle"  height="auto" (tap)="showAlert(racompagner)"/>
+              <img alt="racompagner" src="./assets/img/guindaille/racompagner.png" align="middle"  height="auto" (click)="showAlert(racompagner)"/>
             </ion-col>
             <ion-col col-4>
-              <img alt="uriner" src="./assets/img/guindaille/uriner-dans-le-pot.png" align="middle"  height="auto" (tap)="showAlert(uriner)"/>
+              <img alt="uriner" src="./assets/img/guindaille/uriner-dans-le-pot.png" align="middle"  height="auto" (click)="showAlert(uriner)"/>
             </ion-col>
             <ion-col col-4>
-              <img alt="urinerD" src="./assets/img/guindaille/uriner-dehors.png" align="middle"  height="auto" (tap)="showAlert(dehors)"/>
+              <img alt="urinerD" src="./assets/img/guindaille/uriner-dehors.png" align="middle"  height="auto" (click)="showAlert(dehors)"/>
             </ion-col>
           </ion-row>
 
 
           <ion-row>
             <ion-col col-4 offset-4 >
-              <img alt="violence" src="./assets/img/guindaille/Violence-arrete-toi-avant.png" align="middle" align="center" (tap)="showAlert(violence)"/>
+              <img alt="violence" src="./assets/img/guindaille/Violence-arrete-toi-avant.png" align="middle" align="center" (click)="showAlert(violence)"/>
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -103,7 +103,7 @@
     <ion-item class="gelem" no-lines>
       <ion-slides pager>
         <ion-slide *ngFor="let slide of slides">
-          <img [src]="slide.image" class="slide-image" (tap)="showAlert(slide)"/>
+          <img [src]="slide.image" class="slide-image" (click)="showAlert(slide)"/>
         </ion-slide>
       </ion-slides>
       <p style="color:white">{{'GUINDAILLE.SLIDE' | translate}}</p>
