--- a/src/app/pages/studies/course/modal-info/modal-info.html
+++ b/src/app/pages/studies/course/modal-info/modal-info.html
@@ -23,7 +23,7 @@
 <!--EN-TETE-->
 <ion-header>
     <ion-buttons end>
-        <ion-button icon-only end (tap)="closeModal()">
+        <ion-button icon-only end (click)="closeModal()">
             <ion-icon name="close"></ion-icon>
         </ion-button>
     </ion-buttons>
