Events and Sports

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -81,7 +81,7 @@ app-home {
         }
     }
 
-    @media (all) and (orientation: landscape) {
+/*     @media (all) and (orientation: landscape) {
         ion-row.homeM{
             display:none;
         }
@@ -106,6 +106,6 @@ app-home {
  
             }
         }
-    }
+    } */
 
 }
