--- a/src/app/pages/studies/modal-project/modal-project.html
+++ b/src/app/pages/studies/modal-project/modal-project.html
@@ -31,7 +31,7 @@
   <ion-list>
     <ion-item button *ngFor= "let project of projects" (click)="closeModal(project)">
       <ion-button full  > {{project.name}} </ion-button>
-    </ion-button>
+    </ion-item>
   </ion-list>
 
 </ion-content>
