--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -149,7 +149,7 @@
             <ion-item *ngFor="let emp of employees">
             <ion-item button no-lines (click)="goToEmpDetails(emp)">
               {{emp.lastname}} {{emp.firstname}}
-            </ion-button>
+            </ion-item>
             </ion-item>
           </ion-list>
       </ion-card-content>
