--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
       <ion-menu-toggle id="mainMenu">
         <ion-content>
           <ion-list scroll=true>
-            <ion-item *ngFor="let p of campusPages" (click)="openRootPage(p)">
+            <ion-item button *ngFor="let p of campusPages" (click)="openRootPage(p)">
               <div class="box"><img src={{p.icon}} width="35" height="35"/> <span>&nbsp;   {{p.title | translate}}</span> </div>
             </ion-item>
-            <ion-item *ngFor="let p of studiePages" (click)="openRootPage(p)">
+            <ion-item button *ngFor="let p of studiePages" (click)="openRootPage(p)">
               <div class="box"><img src={{p.icon}} width="35" height="35"/> <span>&nbsp;   {{p.title | translate}}</span> </div>
             </ion-item>
-            <ion-item  *ngFor="let p of toolPages" (click)="openRootPage(p)">
+            <ion-item  button *ngFor="let p of toolPages" (click)="openRootPage(p)">
               <div class="box"><img src={{p.icon}} width="35" height="35"/> <span>&nbsp;   {{p.title | translate}}</span> </div>
             </ion-item>
           </ion-list>
