--- a/src/app/pages/events/events-details/events-details.html
+++ b/src/app/pages/events/events-details/events-details.html
@@ -21,9 +21,9 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="event" secondary>
-    <ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </ion-button>
+      <ion-buttons slot="start">
+          <ion-back-button></ion-back-button>
+        </ion-buttons>
     <ion-title>{{event.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -38,16 +38,16 @@
       </ion-card-title>
       <p [innerHTML]="event.description"></p>
     </ion-card-content>
-    <ion-row no-padding>
+    <ion-row>
       <ion-col text-right>
-        <ion-button clear small icon-left (click)="addFavorite(event)">
-          <ion-icon name='star'></ion-icon>
+        <ion-button fill="clear" size="small" (click)="addFavorite(event)">
+          <ion-icon slot="start" name='star'></ion-icon>
           {{'EVENTS.FAV' | translate}}
         </ion-button>
       </ion-col>
       <ion-col text-right>
-        <ion-button clear small icon-left (click)="openPage(event.link)">
-          <ion-icon name='share-alt'></ion-icon>
+        <ion-button fill="clear" size="small"  (click)="openPage(event.link)">
+          <ion-icon slot="start" name='share-alt'></ion-icon>
           {{'EVENTS.SITE' | translate}}
         </ion-button>
       </ion-col>
